2008-08-07  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-main.c: (main): Fix the flag setting here.

2008-08-07  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-main.c: (main): Make sure we open the db
	index in READONLY mode not READ/WRITE.

2008-08-07  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/Makefile.am: Make sure we compile with debug
	symbols for gdb.
	
	* src/libtracker-db/tracker-db-index.c: (tracker_db_index_open):
	Don't set priv->reload incorrectly, this meant we wouldn't get
	stats because we thought we couldn't open the file. This means
	t-s-t is now working again.

	* src/trackerd/tracker-query-tree.c: Use TRACKER_IS_LANGUAGE for
	TrackerLanguage now it is a GObject.

2008-08-07  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-index.c: Don't free the
	priv->filename before closing the index, causes weird debug
	messages which depend on that pointer.

2008-08-07  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-index.c: Make sure we close the
	index after flushing it and then reopen it.
	
	* utils/qdbm/Makefile.am: Added -g to CFLAGS here so we have debug
	symbols.

2008-08-07  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-db/tracker-db-index.c: Fixed min_bucket
	condition. It should be bigger than 0.

	* tests/tracker-indexer/tracker-index-test.c: Updated tests.

2008-08-07  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c (tracker_indexer_set_running):
	Fix typo. Also try to flush the index before pausing.

2008-08-07  Martyn Russell  <martyn@imendio.com>

	* utils/qdbm/print-words.c: (main):
	* utils/qdbm/search-word.c: (main): Fixed printing help when args
	are broken.

2008-08-07  Martyn Russell  <martyn@imendio.com>

	* configure.ac: 
	* tests/libtracker-common/tracker-type-utils-test.c:
	* tests/tracker-indexer/Makefile.am:
	* tests/tracker-indexer/tracker-index-test.c: Removed dirty hacks